# farming-simulator-cpp

./: CMakeLists.txt  README.md  main.cpp
src/: ansi_clear.hpp  carrot.cpp  carrot.hpp  farm.cpp  farm.hpp  farm_printer.cpp  farm_printer.hpp  player.cpp  player.hpp  plot.hpp  soil.cpp  soil.hpp
src/vegetables/: beet.cpp  beet.hpp  brussels_sprouts.cpp  brussels_sprouts.hpp  carrot.cpp  carrot.hpp  lettuce.cpp  lettuce.hpp  spinach.cpp  spinach.hpp
tests/: carrot_test.cpp  farm_printer_test.cpp  farm_test.cpp  player_test.cpp  soil_test.cpp  vegetables_test.cpp
